[lworld] Inconsistent CastPP type leads to infinite loop in PhaseIterGVN::optimize

XMLWordPrintable

      Since merge with jdk-21+5:

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/phaseX.cpp:1162), pid=276313, tid=276326
      # assert(false) failed: infinite loop in PhaseIterGVN::optimize
      #
      # JRE version: Java(TM) SE Runtime Environment (21.0) (fastdebug build 21-lworld4ea-LTS-2023-02-06-0803323.tobias...)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-lworld4ea-LTS-2023-02-06-0803323.tobias..., mixed mode, tiered, jvmci, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x18348dd] PhaseIterGVN::optimize()+0x55d

      Current CompileTask:
      C2: 1656 98 b 4 jdk.vm.ci.meta.JavaMethod::format (405 bytes)

      Stack: [0x00007fb161eff000,0x00007fb162000000], sp=0x00007fb161ffa670, free space=1005k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x18348dd] PhaseIterGVN::optimize()+0x55d (phaseX.cpp:1162)
      V [libjvm.so+0xb56f52] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x6b2 (loopnode.hpp:1185)
      V [libjvm.so+0xb506d3] Compile::Optimize()+0xe43 (compile.cpp:2635)
      V [libjvm.so+0xb54989] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1959 (compile.cpp:842)
      V [libjvm.so+0x94716e] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x51e (c2compiler.cpp:113)
      V [libjvm.so+0xb61fcc] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa7c (compileBroker.cpp:2237)
      V [libjvm.so+0xb62dd8] CompileBroker::compiler_thread_loop()+0x608 (compileBroker.cpp:1916)
      V [libjvm.so+0x10d6876] JavaThread::thread_main_inner()+0x206 (javaThread.cpp:711)
      V [libjvm.so+0x1b25a80] Thread::call_run()+0x100 (thread.cpp:224)
      V [libjvm.so+0x1797cd3] thread_native_entry(Thread*)+0x103 (os_linux.cpp:739)

            Assignee:
            Tobias Hartmann
            Reporter:
            David Simms
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: