8301664: [lworld] Inconsistent CastPP type leads to infinite loop in PhaseIterGVN::optimize.